--- a/BS-23-PracticalTest/Views/Shared/_Layout.cshtml
+++ b/BS-23-PracticalTest/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login Page</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MasterPost" asp-action="Index">Post</a>
+                        </li>
                     </ul>
                 </div>
             </div>
