--- a/BS-23-PracticalTest/Views/Shared/_Layout.cshtml
+++ b/BS-23-PracticalTest/Views/Shared/_Layout.cshtml
@@ -38,6 +38,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MasterPost" asp-action="Index">Post</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PostComment" asp-action="Index">Comment</a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
